# ntex_sqlx_experiment

./: .env.template  Cargo.toml  README.md
migrations/: 02_todo.sql
src/: main.rs  schema.rs  view.rs
static_assets/: index.html
static_assets/js/: app.js
static_assets/style/: page.css
