[package]
name = "ntex-weft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-macro = "0.2.2"
markup = "0.14.0"
ntex = { version = "0.7", features = ["tokio"] }
ntex-files = "0.3.0"
# tokio + rustls
sqlx = { version = "0.7", features = [ "postgres", "runtime-tokio", "tls-rustls" ] }